k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiramopay
  labels:
    app.kubernetes.io/name: kiramopay
